@@ -61,7 +61,7 @@ PassOwnPtr<Collator> Collator::userDefault()
 {
 #if OS(DARWIN) && USE(CF)
     // Mac OS X doesn't set UNIX locale to match user-selected one, so ICU default doesn't work.
-#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1060 && !OS(IOS)
+#if !OS(IOS) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 1060
     RetainPtr<CFLocaleRef> currentLocale(AdoptCF, CFLocaleCopyCurrent());
     CFStringRef collationOrder = (CFStringRef)CFLocaleGetValue(currentLocale.get(), kCFLocaleCollatorIdentifier);
 #else
