@@ -1,3 +1,12 @@
+2012-07-14  Filip Pizlo  <fpizlo@apple.com>
+
+        Unreviewed, build fix.
+
+        * wtf/Assertions.cpp:
+        * wtf/Platform.h:
+        * wtf/unicode/icu/CollatorICU.cpp:
+        (WTF::Collator::userDefault):
+
 2012-07-13  Xianzhu Wang  <wangxianzhu@chromium.org>
 
         Move WebCore/platform/text/Base64 to WTF/wtf/text
